# peanutgallery

./: ADVANCED_TECH_GUIDE.md  DEV_DIARY.md  GEMINI.md  LICENSE  MANUAL_TESTING__GUIDE.md.rst  README.md  docker-compose.yml  tts.kokoro.md  vision.roboflow.md  vision.ultralytics.md
backend/: .env.example  Dockerfile  database.py  engine.py  main.py  models.py  personalities-data.json  pyproject.toml  video_utils.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: history-data.json
frontend/src/: App.tsx  index.css
frontend/src/components/: EmptyState.tsx
frontend/src/pages/: History.tsx  Home.tsx  Prompts.tsx
frontend/src/styles/: tokens.css
output/: scaffold.md  vision-agents_github_data.json
output/vision-agents/: SKILL.md
output/vision-agents-markdown/: DOCUMENTATION.md  metadata.json
output/vision-agents-markdown/references/: releases.md
output/vision-agents-openrouter/: openrouter_metadata.json
output/vision-agents-openrouter/knowledge_files/: file_structure.md
output/vision-agents/references/: issues.md
product-plan/: README.md  product-overview.md
product-plan/data-shapes/: README.md  overview.ts
product-plan/design-system/: fonts.md  tailwind-colors.md  tokens.css
product-plan/instructions/: one-shot-instructions.md
product-plan/instructions/incremental/: 01-shell.md  02-core-commentary-engine.md  03-prompt-and-personality-system.md  04-commentary-history.md
product-plan/sections/commentary-history/: README.md  tests.md  types.ts
(+36 files in other folders)
