[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=16.1.0",
    "fastapi>=0.136.1",
    "pillow>=10.4.0",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
    "vision-agents[fast-whisper,getstream,moondream,openai]>=0.5.5",
    "yt-dlp>=2026.3.17",
]
